<resources>
    <string name="app_name">Colora</string>
    <string name="welcome_caps">ДОБРО ПОЖАЛОВАТЬ</string>
    <string name="welcome_sub">Создай что-то красивое сегодня</string>
    <string name="title_subtitle">Холст для твоих идей</string>
    <string name="start_label">НАЧАТЬ</string>
    <string name="canvas_title">Холст</string>
    <string name="canvas_desc">Новый рисунок с нуля</string>
    <string name="gallery_title">Галерея</string>
    <string name="gallery">Галерея</string>
    <string name="gallery_desc">Твои работы</string>
    <string name="recent_label">Недавние</string>
    <string name="see_all">Все →</string>
    
    <string name="title_home">Главная</string>
    <string name="title_profile">Профиль</string>
    <string name="title_new_painting">Создать</string>

    <string name="user_name">Художник</string>
    <string name="user_email">artist@colora.app</string>
    <string name="switch_theme">Переключить тему</string>
    <string name="notifications">Уведомления</string>
    <string name="about_app">О приложении</string>
</resources>